--- a/Wray_Tracker/Views/Projects/ProjectDetails.cshtml
+++ b/Wray_Tracker/Views/Projects/ProjectDetails.cshtml
@@ -9,10 +9,7 @@
     UserProjectHelper projectHelper = new UserProjectHelper();
     UserRoleHelper roleHelper = new UserRoleHelper();
 
-
  }
-
-
 
 <!-- Main content -->
 <section class="content-header">
@@ -24,8 +21,8 @@
                     <div class="mx-lg-2 mt-lg-n2 elevation-2 bg-gradient-orange text-white">
                         <h5 class="mx-3 mt-2 mb-0">Details for Project #@Model.Id</h5>
                         <p class="text-sm mx-sm-4">
-                            @Html.ActionLink("Edit |", "Edit", new { id = Model.Id }, new { @class = "text-gray" })
-                            @Html.ActionLink(" Back to List", "Index", null, new { @class = "text-gray" })
+                            @Html.ActionLink("Edit |", "Edit", new { id = Model.Id }, new { @class = "text-white" })
+                            @Html.ActionLink(" Back to List", "Index", null, new { @class = "text-white" })
                         </p>
                     </div>
                     <div class="card-body">
