--- a/Wray_Tracker/Views/Admin/ManageRoles.cshtml
+++ b/Wray_Tracker/Views/Admin/ManageRoles.cshtml
@@ -27,37 +27,45 @@
                 </div>
             }
             <div class="col">
-                <table class="table table-valign-middle border-bottom">
-                    <thead>
-                        <tr>
-                            <th>
-                                @Html.DisplayName("Full Name")
-                            </th>
-                            <th>
-                                @Html.DisplayName("Email")
-                            </th>
-                            <th>
-                                @Html.DisplayName("Role Name")
-                            </th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        @foreach (var user in Model)
-                        {
-                            <tr>
-                                <td class="@colorHelper.GetUserColorClass(user.RoleName)">
-                                    @Html.DisplayFor(model => user.FullName)
-                                </td>
-                                <td class="@colorHelper.GetUserColorClass(user.RoleName)">
-                                    @Html.DisplayFor(model => user.Email)
-                                </td>
-                                <td class="@colorHelper.GetUserColorClass(user.RoleName)">
-                                    @Html.DisplayFor(model => user.RoleName)
-                                </td>
-                            </tr>
-                        }
-                    </tbody>
-                </table>
+                <div class="card">
+                    <div class="mx-3 mt-n2 elevation-2 bg-gradient-navy">
+                        <h5 class="mx-3 mt-2 mb-0">Available Personnel</h5>
+                        <p class="text-sm mx-sm-4"></p>
+                    </div>
+                    <div class="card-body">
+                        <table class="table table-valign-middle border-bottom">
+                            <thead>
+                                <tr>
+                                    <th>
+                                        @Html.DisplayName("Full Name")
+                                    </th>
+                                    <th>
+                                        @Html.DisplayName("Email")
+                                    </th>
+                                    <th>
+                                        @Html.DisplayName("Role Name")
+                                    </th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @foreach (var user in Model)
+                                {
+                                    <tr>
+                                        <td class="@colorHelper.GetUserColorClass(user.RoleName)">
+                                            @Html.DisplayFor(model => user.FullName)
+                                        </td>
+                                        <td class="@colorHelper.GetUserColorClass(user.RoleName)">
+                                            @Html.DisplayFor(model => user.Email)
+                                        </td>
+                                        <td class="@colorHelper.GetUserColorClass(user.RoleName)">
+                                            @Html.DisplayFor(model => user.RoleName)
+                                        </td>
+                                    </tr>
+                                }
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
