--- a/Wray_Tracker/Views/Home/About.cshtml
+++ b/Wray_Tracker/Views/Home/About.cshtml
@@ -25,10 +25,9 @@
 <section class="content">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-3">
-
+            <div class="col">
                 <!-- Profile Image -->
-                <div class="card card-primary card-outline">
+                <div class="card card-navy card-outline">
                     <div class="card-body box-profile">
                         <div class="text-center">
                             <img class="profile-user-img img-fluid img-circle"
@@ -37,7 +36,7 @@
                         </div>
                         @if (User.Identity.IsAuthenticated)
                         {
-                             <h3 class="profile-username text-center">@Model.FullName</h3>
+                            <h3 class="profile-username text-center">@Model.FullName</h3>
 
 
                             @*<p class="text-muted text-center">@User.IsInRole("")</p>*@
@@ -51,31 +50,25 @@
                                 </li>
                             </ul>
                         }
+                        <div class="col">
+                            <a href="@Url.Action("EditProfile", "Home")">
+                                <div class="info-box">
+                                    <span class="info-box-icon bg-gradient-orange elevation-1 text-white"><i class="fas fa-user-edit"></i></span>
+                                    <div class="info-box-content">
+                                        <span class="info-box-text" style="font-size: large; font-weight: bold; color: black;">Edit Profile</span>
+                                    </div>
+                                    <!-- /.info-box-content -->
+                                </div>
+                            </a>
+                            <!-- /.info-box -->
+                        </div>
                     </div>
                     <!-- /.card-body -->
                 </div>
-                <!-- /.card -->
-                <!-- About Me Box -->
-                <div class="col-12">
-                    <a href="@Url.Action("EditProfile", "Home")">
-                        <div class="info-box">
-                            <span class="info-box-icon bg-gradient-orange elevation-1"><i class="fas fa-user-edit"></i></span>
-                            <div class="info-box-content">
-                                <span class="info-box-text" style="font-size: large; font-weight: bold; color: black;">Edit Profile</span>
-                            </div>
-                            <!-- /.info-box-content -->
-                        </div>
-                    </a>
-                    <!-- /.info-box -->
-                </div>
-                <!-- /.card -->
             </div>
-            <!-- /.col -->
-            
-
             <!-- /.col -->
         </div>
         <!-- /.row -->
-    </div><!-- /.container-fluid -->
+    </div>
 </section>
-<!-- /.content -->
+
