--- a/Wray_Tracker/Views/Projects/ProjectDetails.cshtml
+++ b/Wray_Tracker/Views/Projects/ProjectDetails.cshtml
@@ -2,14 +2,14 @@
 @using Wray_Tracker.Helper
 @using Wray_Tracker.Models
 @model Project
-    
+
 @{
     DashboardVM dashboardVM = new DashboardVM();
     CustomUserData userData = new CustomUserData();
     UserProjectHelper projectHelper = new UserProjectHelper();
     UserRoleHelper roleHelper = new UserRoleHelper();
 
- }
+}
 
 <!-- Main content -->
 <section class="content-header">
@@ -21,8 +21,12 @@
                     <div class="mx-lg-2 mt-lg-n2 elevation-2 bg-gradient-orange text-white">
                         <h5 class="mx-3 mt-2 mb-0">Details for Project #@Model.Id</h5>
                         <p class="text-sm mx-sm-4">
-                            @Html.ActionLink("Edit |", "Edit", new { id = Model.Id }, new { @class = "text-white" })
-                            @Html.ActionLink(" Back to List", "Index", null, new { @class = "text-white" })
+                            @if (User.IsInRole("Admin") || User.IsInRole("Manager"))
+                            {
+                                @Html.ActionLink("Edit |", "Edit", new { id = Model.Id }, new { @class = "text-white" })
+                                @Html.ActionLink(" Back to List", "Index", null, new { @class = "text-white" })
+                            }
+
                         </p>
                     </div>
                     <div class="card-body">
@@ -34,7 +38,7 @@
                                         <p class="text-muted">@Model.Name</p>
                                     </div>
                                     <div class="col">
-                                        <h6 class="text-uppercase">Ticket Description</h6>
+                                        <h6 class="text-uppercase">Project Description</h6>
                                         <p class="text-muted">@Model.Description</p>
                                     </div>
                                 </div>
@@ -46,42 +50,50 @@
                                                 <h5 class="mx-3 mt-2 mb-0">Assigned Members</h5>
                                                 <p class="text-sm mx-sm-4">Current Users for this Project</p>
                                             </div>
-                                                <div class="card-body">
-                                                    <table class="table table-valign-middle border-bottom">
-                                                        <thead class="table-head-fixed ">
-                                                            <tr>
-                                                                <th>
-                                                                    @Html.DisplayName("Name")
-                                                                </th>
-                                                                <th>
-                                                                    @Html.DisplayName("Email")
-                                                                </th>
-                                                                <th>
-                                                                    @Html.DisplayName("Role")
-                                                                </th>
-                                                            </tr>
-                                                        </thead>
-                                                        <tbody>
-                                                            @foreach (var item in Model.Users)
-                                                            {
+                                            <div class="card-body">
+                                                <div class="row">
+                                                    <div class="col">
+                                                        <h6 class="text-uppercase">Project Manager</h6>
+                                                        <p class="text-muted">@Html.DisplayFor(model => Model.Users)</p>
+                                                        <hr />
+                                                        <h6 class="text-uppercase">Developers and Submitters</h6>
+                                                        <p class="text-muted"></p>
+                                                        <table class="table table-valign-middle border-bottom">
+                                                            <thead>
                                                                 <tr>
-                                                                    <td>
-                                                                        @Html.DisplayFor(model => item.FullName)
-                                                                    </td>
-                                                                    <td>
-                                                                        @Html.DisplayFor(model => item.Email)
-                                                                    </td>
-                                                                    <td>
-                                                                        @Html.DisplayFor(model => item.Roles)
-                                                                    </td>
+                                                                    <th>
+                                                                        @Html.DisplayName("Name")
+                                                                    </th>
+                                                                    <th>
+                                                                        @Html.DisplayName("Email")
+                                                                    </th>
+                                                                    <th>
+                                                                        @Html.DisplayName("Role")
+                                                                    </th>
                                                                 </tr>
-                                                            }
-                                                        </tbody>
-                                                    </table>
+                                                            </thead>
+                                                            <tbody>
+                                                                @foreach (var item in dashboardVM.UserData)
+                                                                {
+                                                                    <tr>
+                                                                        <td>
+                                                                            @Html.DisplayFor(model => item.FullName)
+                                                                        </td>
+                                                                        <td>
+                                                                            @Html.DisplayFor(model => item.Email)
+                                                                        </td>
+                                                                        <td>
+                                                                            @Html.DisplayFor(model => item.RoleName)
+                                                                        </td>
+                                                                    </tr>
+                                                                }
+                                                            </tbody>
+                                                        </table>
+                                                    </div>
                                                 </div>
+                                            </div>
                                         </div>
                                     </div>
-
                                     <div class="col">
                                         <div class="card">
                                             <div class="mx-3 mt-n2 elevation-2 bg-gradient-orange text-white">
