--- a/Wray_Tracker/Views/Shared/_Layout.cshtml
+++ b/Wray_Tracker/Views/Shared/_Layout.cshtml
@@ -40,9 +40,9 @@
                 <li class="nav-item d-none d-sm-inline-block">
                     <a href="@Url.Action("Dashboard", "Home")" class="nav-link">Home</a>
                 </li>
-                <li class="nav-item d-none d-sm-inline-block">
+                @*<li class="nav-item d-none d-sm-inline-block">
                     <a href="#" class="nav-link">About</a>
-                </li>
+                </li>*@
             </ul>
             <!-- SEARCH FORM -->
             @*<form class="form-inline ml-3">
@@ -61,6 +61,7 @@
                 <!-- Notifications Dropdown Menu -->
                 <li class="nav-item dropdown">
                     <a class="nav-link" data-toggle="dropdown" href="#">
+                        <span class="text-muted text-uppercase text-sm">Notifications</span>
                         <i class="fas fa-bell"></i>
                         <span class="badge bg-gradient-orange navbar-badge text-white">@MessageHelper.GetUnreadNotifications().Count()</span>
                     </a>
@@ -85,7 +86,7 @@
                                     </div>
 
                                 </a>
-                                <button type="submit" class="btn btn-xs btn-block bg-gradient-orange">Dismiss</button>
+                                <button type="submit" class="btn btn-xs btn-block bg-gradient-orange text-white">Dismiss</button>
                             }
                             <div class="dropdown-divider"></div>
                         }
@@ -99,6 +100,7 @@
                 <!-- Current User Dropdown Menu -->
                 <li class="nav-item dropdown">
                     <a class="nav-link" data-toggle="dropdown" href="#">
+                        <span class="text-muted text-uppercase text-sm">User Actions</span>
                         <i class="fas fa-user"></i>
                     </a>
                     <div class="dropdown-menu dropdown-menu-sm dropdown-menu-right">
