--- a/Wray_Tracker/Views/TicketHistories/Index.cshtml
+++ b/Wray_Tracker/Views/TicketHistories/Index.cshtml
@@ -2,74 +2,65 @@
 @using Wray_Tracker.Helper;
 @model IEnumerable<TicketHistory>
 
-@{
-    ViewBag.Title = "Index";
-
-}
-
-<h2>Ticket History Dashboard</h2>
-<hr />
-<table class="table table-striped table-bordered">
-    <thead>
-        <tr>
-            @*<th>
-                    @Html.DisplayNameFor(model => model.Ticket.SubmitterId)
-                </th>*@
-            <th>
-                @Html.DisplayName("Changed By")
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Property)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.OldValue)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.NewValue)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ChangedOn)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-
-            <tr>
-                @*<td>
-                        @Html.DisplayFor(modelItem => item.Ticket.SubmitterId)
-                    </td>*@
-                <td>
-                    @Html.DisplayFor(modelItem => item.User.FullName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Property)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.OldValue)
-                </td>
-                <td>
-                    @* At the moment I would need to feed the DisplayData method an instance of a TicketHistory *@
-                    @*@HistoryDisplayHelper.DisplayData(item)*@
-
-                    @Html.DisplayFor(modelItem => item.NewValue)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ChangedOn)
-                </td>
-                <td>
-
-                    @*@Html.ActionLink("Edit | ", "Edit", new { id = item.Id })
-                        @Html.ActionLink("Details | ", "Details", new { id = item.Id })
-                        @Html.ActionLink("Delete", "Delete", new { id = item.Id })*@
 
 
-                </td>
+<section class="content">
+    <div class="container">
+        <div class="row">
+            <div class="col mt-4">
+                <div class="card">
+                    <div class="mx-3 mt-n2 elevation-2 bg-gradient-navy text-white">
+                        <h5 class="mx-3 mt-2 mb-0">All Ticket History</h5>
+                        <p class="text-sm mx-sm-4">A View of All Ticket History</p>
+                    </div>
+                    <div class="card-body">
+                        <table class="table table-valign-middle border-bottom">
+                            <thead>
+                                <tr>
+                                    <th>
+                                        @Html.DisplayName("Changed By")
+                                    </th>
+                                    <th>
+                                        @Html.DisplayNameFor(model => model.Property)
+                                    </th>
+                                    <th>
+                                        @Html.DisplayNameFor(model => model.OldValue)
+                                    </th>
+                                    <th>
+                                        @Html.DisplayNameFor(model => model.NewValue)
+                                    </th>
+                                    <th>
+                                        @Html.DisplayNameFor(model => model.ChangedOn)
+                                    </th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @foreach (var item in Model)
+                                {
+                                    <tr>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.User.FullName)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.Property)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.OldValue)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.NewValue)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.ChangedOn)
+                                        </td>
+                                    </tr>
 
-            </tr>
-
-        }
-    </tbody>
-</table>
+                                }
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
